docs/reference/v1.2/CMcon.rst
Raspberry Pi CM4/5 Connector
############################

LimePSB RPCM board is designed to use Raspberry Pi CM4/5 as a host computer. Raspberry Pi CM4/5L version without eMMC Flash memory is also supported. Board to board connectors (J1 and J2) are used to connect CM4/5 to the LimePSB RPCM board. Connector pinout, CM4 and CM5 signals and schematic signal names are listed and described in Table 2.

.. tabs::

  .. tab:: Raspberry Pi Compute Module 5 connector pinout

    .. table:: Table 2. Raspberry Pi Compute Module 5 connector pinout

      +----------+---------------------+-----------------------+----------------------------------------+
      | CM4 Pin  | CM4 reference       | Schematic signal name | Description                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 1        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 2        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 3        | Ethernet_Pair3_P    | ETH_TRD3_P            | Ethernet pair 3 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 4        | Ethernet_Pair1_P    | ETH_TRD1_P            | Ethernet pair 1 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 5        | Ethernet_Pair3_N    | ETH_TRD3_N            | Ethernet pair 3 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 6        | Ethernet_Pair1_N    | ETH_TRD1_N            | Ethernet pair 1 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 7        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 8        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 9        | Ethernet_Pair2_N    | ETH_TRD2_N            | Ethernet pair 2 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 10       | Ethernet_Pair0_N    | ETH_TRD0_N            | Ethernet pair 0 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 11       | Ethernet_Pair2_P    | ETH_TRD2_P            | Ethernet pair 2 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 12       | Ethernet_Pair0_P    | ETH_TRD0_P            | Ethernet pair 0 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 13       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 14       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 15       | Ethernet_nLED3      | ETH_LED_Y             | Ethernet activity indicator            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 16       | Ethernet_SYNC_IN    | RPI_PIN16             | IEEE1588 SYNC Input                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 17       | Ethernet_nLED2      | ETH_LED_G             | Ethernet speed indicator               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 18       | Ethernet_SYNC_OUT   | RPI_PIN18             | IEEE1588 SYNC Output                   |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 19       | Ethernet_nLED1      | NC                    | Ethernet speed indicator               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 20       | EEPROM_nWP          | RPI_EEPROM_nWP        | EEPROM write   protect                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 21       | Pi_nLED_Activity    | RPI_STATUS_LED_R      | Pi activity LED                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 22       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 23       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 24       | GPIO26              | PCIE_LED_WPAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 25       | GPIO21              | RPI_SPI1_SCLK         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 26       | GPIO19              | RPI_SPI1_MISO         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 27       | GPIO20              | RPI_SPI1_MOSI         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 28       | GPIO13              | RPI_PWM1              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 29       | GPIO16              | RPI_SPI1_SS2          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 30       | GPIO6               | PCIE_LED_WWAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 31       | GPIO12              | RPI_PWM0              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 32       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 33       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 34       | GPIO5               | BUZZER                | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 35       | ID_SC               | RPI_ID_SC             | BCM2711 GPIO 1                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 36       | ID_SD               | RPI_ID_SD             | BCM2711 GPIO 0                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 37       | GPIO7               | RPI_SPI0_SS1          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 38       | GPIO11              | RPI_SPI0_SCLK         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 39       | GPIO8               | RPI_SPI0_SS0          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 40       | GPIO9               | RPI_SPI0_MISO         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 41       | GPIO25              | PCIE_LED_WLAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 42       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 43       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 44       | GPIO10              | RPI_SPI0_MOSI         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 45       | GPIO24              | RPI_BTN1              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 46       | GPIO22              | RPI_GPIO22            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 47       | GPIO23              | RPI_BTN2              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 48       | GPIO27              | RPI_GPIO27            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 49       | GPIO18              | RPI_SPI1_SS0          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 50       | GPIO17              | RPI_SPI1_SS1          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 51       | GPIO15              | RPI_UART0_RX          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 52       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 53       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 54       | GPIO4               | RPI_GPIO4             | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 55       | GPIO14              | RPI_UART0_TX          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 56       | GPIO3               | ADF_MUXOUT            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 57       | SD_CLK              | RPI_SD_CLK            | SD card clock signal                   |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 58       | GPIO2               | RPI_GPIO2             | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 59       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 60       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 61       | SD_DAT3             | RPI_SD_D3             | SD card/eMMC Data3 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 62       | SD_CMD              | RPI_SD_CMD            | SD card/eMMC Command signal            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 63       | SD_DAT0             | RPI_SD_D0             | SD card/eMMC Data0 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 64       | SD_DAT5             | NC                    | SD card/eMMC Data5 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 65       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 66       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 67       | SD_DAT1             | RPI_SD_D1             | SD card/eMMC Data1 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 68       | SD_DAT4             | NC                    | SD card/eMMC Data4 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 69       | SD_DAT2             | RPI_SD_D2             | SD card/eMMC Data2 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 70       | SD_DAT7             | NC                    | SD card/eMMC Data7 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 71       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 72       | SD_DAT6             | NC                    | SD card/eMMC Data6 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 73       | SD_VDD_Override     | NC                    | Force SD card/eMMC interface           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 74       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 75       | SD_PWR_ON           | RPI_SD_PWR_ON         | Output to power-switch for the SD card |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 76       | Reserved            | RPI_VBAT              | Do not connect                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 77       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 78       | GPIO_VREF           | VCC3P3                | GPIO   reference voltage               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 79       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 80       | SCL0                | RPI_I2C0_SCL          | I2C clock pin                          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 81       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 82       | SDA0                | RPI_I2C0_SDA          | I2C Data pin                           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 83       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 84       | CM4_3.3V   (Output) | VCC3P3_RPI            | 3.3V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 85       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 86       | CM4_3.3V   (Output) | VCC3P3_RPI            | 3.3V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 87       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 88       | CM4_1.8V   (Output) | VCC1P8_RPI            | 1.8V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 89       | WL_nDisable         | RPI_WL_nDISABLE       | Wireless   interface disable           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 90       | CM4_1.8V   (Output) | VCC1P8_RPI            | 1.8V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 91       | BT_nDisable         | RPI_BT_nDISABLE       | Bluetooth interface disable            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 92       | RUN_PG              | RPI_RUN_PG            | CM4 CPU reset/power good               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 93       | nRPIBOOT            | RPI_nRPIBOOT          | booting from an RPI server             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 94       | AnalogIP1           | RPI_AIP1              | Analogue input                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 95       | PI_LED_nPWR         | RPI_LED_nPWR          | Power On LED                           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 96       | AnalogIP0           | RPI_AIP0              | Analogue input                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 97       | Camera_GPIO         | CAM1_GPIO0            | Used to shut down the camera           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 98       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 99       | GLOBAL_EN           | RPI_GLOBAL_EN         | CM4 enable                             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 100      | nEXTRST             | RPI_nEXTRST           | Output. Driven low during reset        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 101      | USB_OTG_ID          | RPI_USB_OTG_ID        | USB OTG Pin                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 102      | PCIe_CLK_nREQ       | RPI_PCIE_CLK_nREQ     | PCIe clock request                     |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 103      | USB_N               | RPI_USB_D_N           | USB D-                                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 104      | Reserved            | NC                    | Do not connect                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 105      | USB_P               | RPI_USB_D_P           | USB D+                                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 106      | Reserved            | RPI_PCIE_DET_nWAKE    | Do not connect                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 107      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 108      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 109      | PCIe_nRST           | RPI_PCIE_nRST         | PCIe reset                             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 110      | PCIe_CLK_P          | RPI_PCIE_CLK_P        | PCIe clock Out positive                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 111      | VDAC_COMP           | RPI_PIN11             | Video DAC output                       |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 112      | PCIe_CLK_N          | RPI_PCIE_CLK_N        | PCIe clock Out negative                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 113      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 114      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 115      | CAM1_D0_N           | CAM1_D0_N             | Input Camera1 D0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 116      | PCIe_RX_P           | RPI_PCIE_RX_P         | Input PCIe GEN 2 RX positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 117      | CAM1_D0_P           | CAM1_D0_P             | Input Camera1 D0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 118      | PCIe_RX_N           | RPI_PCIE_RX_N         | Input PCIe GEN 2 RX negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 119      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 120      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 121      | CAM1_D1_N           | CAM1_D1_N             | Input Camera1 D1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 122      | PCIe_TX_P           | RPI_PCIE_TX_P         | Output PCIe GEN 2 TX positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 123      | CAM1_D1_P           | CAM1_D1_P             | Input Camera1 D1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 124      | PCIe_TX_N           | RPI_PCIE_TX_N         | Output PCIe GEN 2 TX positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 125      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 126      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 127      | CAM1_C_N            | CAM1_CLK_N            | Input Camera1 clock negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 128      | CAM0_D0_N           | RPI_USB3_RX0_N        | Input Camera0 D0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 129      | CAM1_C_P            | CAM1_CLK_P            | Input Camera1 clock positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 130      | CAM0_D0_P           | RPI_USB3_RX0_P        | Input Camera0 D0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 131      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 132      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 133      | CAM1_D2_N           | NC                    | Input Camera1 D2 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 134      | CAM0_D1_N           | RPI_USB3_D0_P         | Input Camera0 D1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 135      | CAM1_D2_P           | NC                    | Input Camera1 D2 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 136      | CAM0_D1_P           | RPI_USB3_D0_N         | Input Camera0 D1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 137      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 138      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 139      | CAM1_D3_N           | NC                    | Input Camera1 D3 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 140      | CAM0_C_N            | RPI_USB3_TX0_N        | Input Camera0 clock negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 141      | CAM1_D3_P           | NC                    | Input Camera1 D3 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 142      | CAM0_C_P            | RPI_USB3_TX0_P        | Input Camera0 clock positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 143      | HDMI1_HOTPLUG       | HDMI1_HOTPLUG         | Input HDMI1 hotplug                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 144      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 145      | HDMI1_SDA           | HDMI1_SDA             | A Bidirectional HDMI1 SDA              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 146      | HDMI1_TX2_P         | HDMI1_D2_P            | Output HDMI1 TX2 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 147      | HDMI1_SCL           | HDMI1_SCL             | Bidirectional HDMI1 SCL                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 148      | HDMI1_TX2_N         | HDMI1_D2_N            | Output HDMI1 TX2 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 149      | HDMI1_CEC           | HDMI1_CEC             | Input HDMI1 CEC                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 150      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 151      | HDMI0_CEC           | HDMI0_CEC             | Input HDMI0 CEC                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 152      | HDMI1_TX1_P         | HDMI1_D1_P            | Output HDMI1 TX1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 153      | HDMI0_HOTPLUG       | HDMI0_HPD             | Input HDMI0 hotplug                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 154      | HDMI1_TX1_N         | HDMI1_D1_N            | Output HDMI1 TX1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 155      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 156      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 157      | DSI0_D0_N           | RPI_USB3_RX1_N        | Output Display0 D0 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 158      | HDMI1_TX0_P         | HDMI1_D0_P            | Output HDMI1 TX0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 159      | DSI0_D0_P           | RPI_USB3_RX1_P        | Output Display0 D0 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 160      | HDMI1_TX0_N         | HDMI1_D0_N            | Output HDMI1 TX0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 161      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 162      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 163      | DSI0_D1_N           | RPI_USB3_D1_P         | Output Display0 D1 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 164      | HDMI1_CLK_P         | HDMI1_CLK_P           | Output HDMI1 clock positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 165      | DSI0_D1_P           | RPI_USB3_D1_N         | Output Display0 D1 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 166      | HDMI1_CLK_N         | HDMI1_CLK_N           | Output HDMI1 clock negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 167      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 168      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 169      | DSI0_C_N            | RPI_USB3_TX1_N        | Output Display0 clock negative         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 170      | HDMI0_TX2_P         | HDMI0_D2_P            | Output HDMI0 TX2 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 171      | DSI0_C_P            | RPI_USB3_TX1_P        | Output Display0 clock positive         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 172      | HDMI0_TX2_N         | HDMI0_D2_N            | Output HDMI0 TX2 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 173      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 174      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 175      | DSI1_D0_N           | DSI1_D0_N             | Output Display1 D0 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 176      | HDMI0_TX1_P         | HDMI0_D1_P            | Output HDMI0 TX1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 177      | DSI1_D0_P           | DSI1_D0_P             | Output Display1 D0 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 178      | HDMI0_TX1_N         | HDMI0_D1_N            | Output HDMI0 TX1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 179      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 180      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 181      | DSI1_D1_N           | DSI1_D1_N             | Output Display1 D1 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 182      | HDMI0_TX0_P         | HDMI0_D0_P            | Output HDMI0 TX0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 183      | DSI1_D1_P           | DSI1_D1_P             | Output Display1 D1 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 184      | HDMI0_TX0_N         | HDMI0_D0_N            | Output HDMI0 TX0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 185      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 186      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 187      | DSI1_C_N            | DSI1_CLK_N            | Output Display1 clock negative         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 188      | HDMI0_CLK_P         | HDMI0_CLK_P           | Output HDMI0 clock positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 189      | DSI1_C_P            | DSI1_CLK_P            | Output Display1 clock positive         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 190      | HDMI0_CLK_N         | HDMI0_CLK_N           | Output HDMI0 clock negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 191      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 192      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 193      | DSI1_D2_N           | NC                    | Output Display1 D2 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 194      | DSI1_D3_N           | NC                    | Output Display1 D3 negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 195      | DSI1_D2_P           | NC                    | Output Display1 D2 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 196      | DSI1_D3_P           | NC                    | Output Display1 D3 positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 197      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 198      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 199      | HDMI0_SDA           | HDMI0_SDA             | Bidirectional HDMI0 SDA                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 200      | HDMI0_SCL           | HDMI0_SCL             | Bidirectional HDMI0 SCL                |
      +----------+---------------------+-----------------------+----------------------------------------+

  .. tab:: Raspberry Pi Compute Module 4 connector pinout

    .. table:: Table 2. Raspberry Pi Compute Module 4 connector pinout
    
      +----------+---------------------+-----------------------+----------------------------------------+
      | CM4 Pin  | CM4 reference       | Schematic signal name | Description                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 1        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 2        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 3        | Ethernet_Pair3_P    | ETH_TRD3_P            | Ethernet pair 3 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 4        | Ethernet_Pair1_P    | ETH_TRD1_P            | Ethernet pair 1 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 5        | Ethernet_Pair3_N    | ETH_TRD3_N            | Ethernet pair 3 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 6        | Ethernet_Pair1_N    | ETH_TRD1_N            | Ethernet pair 1 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 7        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 8        | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 9        | Ethernet_Pair2_N    | ETH_TRD2_N            | Ethernet pair 2 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 10       | Ethernet_Pair0_N    | ETH_TRD0_N            | Ethernet pair 0 negative               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 11       | Ethernet_Pair2_P    | ETH_TRD2_P            | Ethernet pair 2 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 12       | Ethernet_Pair0_P    | ETH_TRD0_P            | Ethernet pair 0 positive               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 13       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 14       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 15       | Ethernet_nLED3      | ETH_LED_Y             | Ethernet activity indicator            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 16       | Fan_Tacho           | RPI_PIN16             | Fan Tacho Input pin                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 17       | Ethernet_nLED2      | ETH_LED_G             | Ethernet speed indicator               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 18       | Ethernet_SYNC_OUT   | RPI_PIN18             | IEEE1588 SYNC Output                   |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 19       | Fan_PWM             | NC                    | Open drain output                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 20       | EEPROM_nWP          | RPI_EEPROM_nWP        | EEPROM write   protect                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 21       | Pi_nLED_Activity    | RPI_STATUS_LED_R      | Pi activity LED                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 22       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 23       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 24       | GPIO26              | PCIE_LED_WPAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 25       | GPIO21              | RPI_SPI1_SCLK         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 26       | GPIO19              | RPI_SPI1_MISO         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 27       | GPIO20              | RPI_SPI1_MOSI         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 28       | GPIO13              | RPI_PWM1              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 29       | GPIO16              | PRI_SPI1_SS2          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 30       | GPIO6               | PCIE_LED_WWAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 31       | GPIO12              | RPI_PWM0              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 32       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 33       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 34       | GPIO5               | BUZZER                | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 35       | ID_SC               | RPI_ID_SC             | BCM2711 GPIO 1                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 36       | ID_SD               | RPI_ID_SD             | BCM2711 GPIO 0                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 37       | GPIO7               | RPI_SPI0_SS1          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 38       | GPIO11              | RPI_SPI0_SCLK         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 39       | GPIO8               | RPI_SPI0_SS0          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 40       | GPIO9               | RPI_SPI0_MISO         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 41       | GPIO25              | PCIE_LED_WLAN         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 42       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 43       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 44       | GPIO10              | RPI_SPI0_MOSI         | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 45       | GPIO24              | RPI_BTN1              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 46       | GPIO22              | RPI_GPIO22            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 47       | GPIO23              | RPI_BTN2              | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 48       | GPIO27              | RPI_GPIO27            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 49       | GPIO18              | RPI_SPI1_SS0          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 50       | GPIO17              | RPI_SPI1_SS1          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 51       | GPIO15              | RPI_UART0_RX          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 52       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 53       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 54       | GPIO4               | RPI_GPIO4             | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 55       | GPIO14              | RPI_UART0_TX          | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 56       | GPIO3               | ADF_MUXOUT            | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 57       | SD_CLK              | RPI_SD_CLK            | SD card clock signal                   |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 58       | GPIO2               | RPI_GPIO2             | General   purpose                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 59       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 60       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 61       | SD_DAT3             | RPI_SD_D3             | SD card/eMMC Data3 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 62       | SD_CMD              | RPI_SD_CMD            | SD card/eMMC Command signal            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 63       | SD_DAT0             | RPI_SD_D0             | SD card/eMMC Data0 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 64       | SD_DAT5             | NC                    | SD card/eMMC Data5 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 65       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 66       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 67       | SD_DAT1             | RPI_SD_D1             | SD card/eMMC Data1 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 68       | SD_DAT4             | NC                    | SD card/eMMC Data4 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 69       | SD_DAT2             | RPI_SD_D2             | SD card/eMMC Data2 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 70       | SD_DAT7             | NC                    | SD card/eMMC Data7 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 71       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 72       | SD_DAT6             | NC                    | SD card/eMMC Data6 signal              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 73       | SD_VDD_Override     | NC                    | Force SD card/eMMC interface           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 74       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 75       | SD_PWR_ON           | RPI_SD_PWR_ON         | Output to power-switch for the SD card |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 76       | VBAT                | RPI_VBAT              | RTC Battery input                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 77       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 78       | GPIO_VREF           | VCC3P3                | GPIO   reference voltage               |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 79       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 80       | SCL0                | RPI_I2C0_SCL          | I2C clock pin                          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 81       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 82       | SDA0                | RPI_I2C0_SDA          | I2C Data pin                           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 83       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 84       | CM4_3.3V   (Output) | VCC3P3_RPI            | 3.3V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 85       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 86       | CM4_3.3V   (Output) | VCC3P3_RPI            | 3.3V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 87       | +5V (Input)         | VCC5P0                | 4.75V-5.25V. Main power input          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 88       | CM4_1.8V   (Output) | VCC1P8_RPI            | 1.8V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 89       | WL_nDisable         | RPI_WL_nDISABLE       | Wireless   interface disable           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 90       | CM4_1.8V   (Output) | VCC1P8_RPI            | 1.8V ± 2.5%. Power Output              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 91       | BT_nDisable         | RPI_BT_nDISABLE       | Bluetooth interface disable            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 92       | PWR_Button          | RPI_RUN_PG            | CM5 CPU turn on/off                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 93       | nRPIBOOT            | RPI_nRPIBOOT          | booting from an RPI server             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 94       | CC1                 | RPI_AIP1              | USB PSU PD signal                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 95       | LED_nPWR            | RPI_LED_nPWR          | Power On LED                           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 96       | CC2                 | RPI_AIP0              | USB PSU PD signal                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 97       | CAM_GPIO0           | CAM1_GPIO0            | Used to shut down the camera           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 98       | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 99       | PMIC_Enable         | RPI_GLOBAL_EN         | CM4 enable                             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 100      | CAM_GPIO1           | RPI_nEXTRST           | Output. Driven low during reset        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 101      | USB_OTG_ID          | RPI_USB_OTG_ID        | USB OTG Pin                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 102      | PCIe_CLK_nREQ       | RPI_PCIE_CLK_nREQ     | PCIe clock request                     |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 103      | USB_N               | RPI_USB_D_N           | USB D-                                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 104      | PCIe_nWAKE          | NC                    | PCIe WAKE# signal                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 105      | USB_P               | RPI_USB_D_P           | USB D+                                 |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 106      | PCIe_PWR_EN         | RPI_PCIE_DET_nWAKE    | PCIe device enable                     |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 107      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 108      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 109      | PCIe_nRST           | RPI_PCIE_nRST         | PCIe reset                             |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 110      | PCIe_CLK_P          | RPI_PCIE_CLK_P        | PCIe clock Out positive                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 111      | VBUS_EN             | RPI_PIN11             | USB3 power enable                      |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 112      | PCIe_CLK_N          | RPI_PCIE_CLK_N        | PCIe clock Out negative                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 113      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 114      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 115      | MIPI0_D0_N          | CAM1_D0_N             | Camera / display D0 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 116      | PCIe_RX_P           | RPI_PCIE_RX_P         | Input PCIe GEN 2 RX positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 117      | MIPI0_D0_P          | CAM1_D0_P             | Camera / display D0 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 118      | PCIe_RX_N           | RPI_PCIE_RX_N         | Input PCIe GEN 2 RX negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 119      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 120      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 121      | MIPI0_D1_N          | CAM1_D1_N             | Camera / display D1 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 122      | PCIe_TX_P           | RPI_PCIE_TX_P         | Output PCIe GEN 2 TX positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 123      | MIPI0_D1_P          | CAM1_D1_P             | Camera / display D1 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 124      | PCIe_TX_N           | RPI_PCIE_TX_N         | Output PCIe GEN 2 TX positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 125      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 126      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 127      | MIPI0_C_N           | CAM1_CLK_N            | Camera / display clock negative        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 128      | USB3-0-RX_N         | RPI_USB3_RX0_N        | USB3 Port 0 RX Input negative          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 129      | MIPI0_C_P           | CAM1_CLK_P            | Camera / display clock positive        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 130      | USB3-0-RX_P         | RPI_USB3_RX0_P        | USB3 Port 0 RX Input positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 131      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 132      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 133      | MIPI0_D2_N          | NC                    | Camera / display D2 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 134      | USB3-0-DP           | RPI_USB3_D0_P         | USB3 port 0 DP                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 135      | MIPI0_D2_P          | NC                    | Camera / display D2 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 136      | USB3-0-DM           | RPI_USB3_D0_N         | USB3 Port 0 DM                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 137      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 138      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 139      | MIPI0_D3_N          | NC                    | Camera / display D3 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 140      | USB3-0-TX_N         | RPI_USB3_TX0_N        | USB3 Port 0 TX output negative         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 141      | MIPI0_D3_P          | NC                    | Camera / display D3 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 142      | USB3-0-TX_P         | RPI_USB3_TX0_P        | USB3 Port 0 TX output positive         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 143      | HDMI1_HOTPLUG       | HDMI1_HOTPLUG         | Input HDMI1 hotplug                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 144      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 145      | HDMI1_SDA           | HDMI1_SDA             | A Bidirectional HDMI1 SDA              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 146      | HDMI1_TX2_P         | HDMI1_D2_P            | Output HDMI1 TX2 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 147      | HDMI1_SCL           | HDMI1_SCL             | Bidirectional HDMI1 SCL                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 148      | HDMI1_TX2_N         | HDMI1_D2_N            | Output HDMI1 TX2 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 149      | HDMI1_CEC           | HDMI1_CEC             | Input HDMI1 CEC                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 150      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 151      | HDMI0_CEC           | HDMI0_CEC             | Input HDMI0 CEC                        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 152      | HDMI1_TX1_P         | HDMI1_D1_P            | Output HDMI1 TX1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 153      | HDMI0_HOTPLUG       | HDMI0_HPD             | Input HDMI0 hotplug                    |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 154      | HDMI1_TX1_N         | HDMI1_D1_N            | Output HDMI1 TX1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 155      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 156      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 157      | USB3-1-RX_N         | RPI_USB3_RX1_N        | USB3 Port 1 RX Input negative          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 158      | HDMI1_TX0_P         | HDMI1_D0_P            | Output HDMI1 TX0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 159      | USB3-1-RX_P         | RPI_USB3_RX1_P        | USB3 Port 1 RX Input positive          |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 160      | HDMI1_TX0_N         | HDMI1_D0_N            | Output HDMI1 TX0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 161      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 162      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 163      | USB3-1-DP           | RPI_USB3_D1_P         | USB3 port 1 DP                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 164      | HDMI1_CLK_P         | HDMI1_CLK_P           | Output HDMI1 clock positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 165      | USB3-1-DM           | RPI_USB3_D1_N         | USB3 Port 1 DM                         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 166      | HDMI1_CLK_N         | HDMI1_CLK_N           | Output HDMI1 clock negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 167      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 168      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 169      | USB3-1-TX_N         | RPI_USB3_TX1_N        | USB3 Port 1 TX output negative         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 170      | HDMI0_TX2_P         | HDMI0_D2_P            | Output HDMI0 TX2 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 171      | USB3-1-TX_P         | RPI_USB3_TX1_P        | USB3 Port 1 TX output positive         |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 172      | HDMI0_TX2_N         | HDMI0_D2_N            | Output HDMI0 TX2 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 173      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 174      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 175      | MIPI1_D0_N          | DSI1_D0_N             | Camera / display D0 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 176      | HDMI0_TX1_P         | HDMI0_D1_P            | Output HDMI0 TX1 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 177      | MIPI1_D0_P          | DSI1_D0_P             | Camera / display D0 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 178      | HDMI0_TX1_N         | HDMI0_D1_N            | Output HDMI0 TX1 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 179      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 180      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 181      | MIPI1_D1_N          | DSI1_D1_N             | Camera / display D1 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 182      | HDMI0_TX0_P         | HDMI0_D0_P            | Output HDMI0 TX0 positive              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 183      | MIPI1_D1_P          | DSI1_D1_P             | Camera / display D1 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 184      | HDMI0_TX0_N         | HDMI0_D0_N            | Output HDMI0 TX0 negative              |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 185      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 186      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 187      | MIPI1_C_N           | DSI1_CLK_N            | Camera / display clock negative        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 188      | HDMI0_CLK_P         | HDMI0_CLK_P           | Output HDMI0 clock positive            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 189      | MIPI1_C_P           | DSI1_CLK_P            | Camera / display clock positive        |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 190      | HDMI0_CLK_N         | HDMI0_CLK_N           | Output HDMI0 clock negative            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 191      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 192      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 193      | MIPI1_D2_N          | NC                    | Camera / display D2 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 194      | MIPI1_D3_N          | NC                    | Camera / display D3 negative           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 195      | MIPI1_D2_P          | NC                    | Camera / display D2 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 196      | MIPI1_D3_P          | NC                    | Camera / display D3 positive           |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 197      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 198      | GND                 | GND                   | Ground (0V)                            |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 199      | HDMI0_SDA           | HDMI0_SDA             | Bidirectional HDMI0 SDA                |
      +----------+---------------------+-----------------------+----------------------------------------+
      | 200      | HDMI0_SCL           | HDMI0_SCL             | Bidirectional HDMI0 SCL                |
      +----------+---------------------+-----------------------+----------------------------------------+
